[gd_scene load_steps=13 format=3 uid="uid://cqgcpeeonneaf"]

[ext_resource type="Script" path="res://main.gd" id="1_51mta"]
[ext_resource type="PackedScene" uid="uid://d4e07nxnwcbq1" path="res://ball.tscn" id="1_cvrnk"]
[ext_resource type="PackedScene" uid="uid://0mt3nnvgot43" path="res://player_1.tscn" id="2_irdxs"]
[ext_resource type="Script" path="res://player_2.gd" id="4_uek3b"]
[ext_resource type="Script" path="res://CharacterBody2D.gd" id="5_h2kun"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lqrcp"]
size = Vector2(1187, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pa43"]
size = Vector2(20, 678)

[sub_resource type="LabelSettings" id="LabelSettings_8iou0"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_vd1so"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_mudal"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_6c8d0"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_g7o4r"]
font_size = 25

[node name="Node2D" type="Node2D"]
script = ExtResource("1_51mta")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="Top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(577, -9)
shape = SubResource("RectangleShape2D_lqrcp")

[node name="Bottom" type="Area2D" parent="."]
position = Vector2(0, 668)
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(577, -9)
shape = SubResource("RectangleShape2D_lqrcp")

[node name="Left" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-9, 325)
shape = SubResource("RectangleShape2D_4pa43")

[node name="Right" type="Area2D" parent="."]
position = Vector2(1172, 0)
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(-9, 325)
shape = SubResource("RectangleShape2D_4pa43")

[node name="Ball" parent="." instance=ExtResource("1_cvrnk")]
collision_mask = 0

[node name="Player1" parent="." instance=ExtResource("2_irdxs")]
position = Vector2(12, 275)
collision_layer = 0
collision_mask = 2

[node name="Player2" parent="." instance=ExtResource("2_irdxs")]
position = Vector2(1138, 375)
rotation = 3.14159
collision_layer = 0
collision_mask = 2
script = ExtResource("4_uek3b")

[node name="P1Point" type="Label" parent="."]
offset_left = 288.0
offset_top = 100.0
offset_right = 328.0
offset_bottom = 145.0
text = "0"
label_settings = SubResource("LabelSettings_8iou0")

[node name="P2Point" type="Label" parent="."]
offset_left = 865.0
offset_top = 100.0
offset_right = 905.0
offset_bottom = 145.0
text = "0"
label_settings = SubResource("LabelSettings_vd1so")

[node name="Start Button" type="Button" parent="."]
offset_left = 497.0
offset_top = 295.0
offset_right = 577.0
offset_bottom = 326.0
scale = Vector2(2, 2)
text = "Play"

[node name="P1 label" type="Label" parent="."]
offset_left = 67.0
offset_top = 312.0
offset_right = 107.0
offset_bottom = 338.0
text = "P1"
label_settings = SubResource("LabelSettings_mudal")
horizontal_alignment = 1

[node name="P2 label" type="Label" parent="."]
offset_left = 1046.0
offset_top = 314.0
offset_right = 1086.0
offset_bottom = 345.0
text = "P2"
label_settings = SubResource("LabelSettings_6c8d0")
horizontal_alignment = 1

[node name="Instruction" type="Label" parent="."]
offset_left = 332.0
offset_top = 435.0
offset_right = 821.0
offset_bottom = 461.0
label_settings = SubResource("LabelSettings_g7o4r")
horizontal_alignment = 1

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("5_h2kun")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
